--- a/pom.xml
+++ b/pom.xml
@@ -94,15 +94,23 @@
     </dependencies>
 
     <build>
-        <finalName>CRM</finalName>
+        <!--扫描到resources下的xml等资源文件-->
         <resources>
             <resource>
-                <directory>src/main/java</directory><!--所在的目录-->
-                <includes><!--包括目录下的.properties,.xml文件都会扫描到-->
+                <directory>src/main/java</directory>
+                <includes>
                     <include>**/*.properties</include>
                     <include>**/*.xml</include>
                 </includes>
-                <filtering>false</filtering>
+                <filtering>true</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*.properties</include>
+                    <include>**/*.xml</include>
+                </includes>
+                <filtering>true</filtering>
             </resource>
         </resources>
     </build>
