处理交易添加页数据展示

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -56,4 +56,13 @@
         <servlet-name>ClueServlet</servlet-name>
         <url-pattern>/workbench/clue.do</url-pattern>
     </servlet-mapping>
+
+    <servlet>
+        <servlet-name>TranServlet</servlet-name>
+        <servlet-class>com.fsyj.crm.workbench.web.controller.TranServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>TranServlet</servlet-name>
+        <url-pattern>/workbench/tran.do</url-pattern>
+    </servlet-mapping>
 </web-app>
